Fixed spacing for all

--- a/static/css/output.css
+++ b/static/css/output.css
@@ -6,7 +6,7 @@ h1, .subhead { text-align: center; }
   max-width: 900px;
   margin: 0 auto;
 }
-#at{
+.graphcenter{
   padding-left: 19%;
 }
 .process-chart {
